# VLC_Test

./: CMakeLists.txt  VLCPlayer.cpp  VLCPlayer.h
